add check to run with bash